# pptx

./: .gitignore  README.md  agata_system_prompt.py  clf.py  pyproject.toml  requirements.txt  test.py
pptx_generate/: __init__.py  builder.py  classify_verify.py  colors.py  overview_reader.py  schemas.py  themes.py  tool.py  verify_tool.py
pptx_generate/tools/: extract_brand_icons.py
pptx_generator/: builder.py  overview_reader.py  schemas.py  tool.py
